--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
-    "nodemon": "^2.0.20",
     "validator": "^13.7.0"
   },
   "name": "ericburgers186",
@@ -19,10 +18,12 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
   },
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   },
   "keywords": [],
   "author": "",
